feat: 관리자 계정용 summary 추가 및 유저 이름 구글로그인에서 받아오도록 수정
